--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 <head>
-<title>Example App</title>
+<title>RescueTimeMenuBar Coming soon </title>
 </head>
 <body>
-  <button onclick="hello()">Button to close this app</button>
+ - Check if you want to start at startup or not
+ - enter your key instead of having to build it manually
+ - Select either distracting time or productive time
+ - Show graph of days productivity by hours
+ - show graph of days distraction by hours
 </body>
 </html>
